<resources>
    <string name="app_name">ShoppingCart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="purchase_online">PURCHASE ONLINE</string>
    <string name="track_your_order">TRACK YOUR ORDER</string>
    <string name="get_your_order">GET YOUR ORDER</string>
    <string name="password">Password</string>
    <string name="enter_email">enter email</string>
    <string name="email_id">Email id</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="i_don_t_have_an_account">I DON\'T HAVE AN ACCOUNT</string>
    <string name="enter_password">enter password</string>
    <string name="login">LOGIN</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">enter full name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="register">REGISTER</string>
    <string name="i_have_an_account">I HAVE AN ACCOUNT</string>
    <string name="phones">phones</string>
    <string name="phone">Phone</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="specifications">Specifications</string>
    <string name="UserReviews">User Reviews</string>
    <string name="model_name">model name</string>
    <string name="real_me">real me</string>
    <string name="comment">Comment</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="_7038264893">7038264893</string>
    <string name="pavani_gmail_com">pavani@gmail.com</string>
    <string name="Pavani">Pavani</string>
    <string name="super_cart">SuperCart</string>
    <string name="remember_me">Remember me \t</string>
</resources>