<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ProductDetails.ProductDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_24dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/productD_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            style="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/orange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:numStars="5"
            android:rating="4"
            style="@style/Widget.AppCompat.RatingBar.Small"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/productD_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productD_name"
            android:text="@string/description"
            android:layout_marginTop="@dimen/_8dp"
            style="@style/TextAppearance.AppCompat.Medium"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageD_phone"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:src="@drawable/baseline_phone_android_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productD_description"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/productD_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/price"
            style="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/orange"
            app:layout_constraintTop_toBottomOf="@id/imageD_phone"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            style="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/imageD_phone"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_specification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/specifications"
            android:layout_marginTop="@dimen/_8dp"
            style="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@id/productD_price"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_specifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintTop_toBottomOf="@id/text_specification"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/UserReviews"
            android:layout_marginTop="@dimen/_8dp"
            style="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@id/rv_specifications"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintTop_toBottomOf="@id/text_reviews"/>



    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>